# SSKG

./: .gitignore  CITATION.cff  Dockerfile  README.md  __main__.py  dowload_pdfs.py  extract_dois.py  getPaperDois.py  main.py  oldPipeline.py  openalex_dois.json  pdfs_to_obj.py  pipeline.py  pipeline_copy.py  requirements.txt  setup.cfg
download_pdf/: arxiv_downloader.py  download_pipeline.py  downloaded_obj.py  oa_pdf_downloader.py  oa_pdf_url_extractor.py  pipeline.py
download_pdf/openalex/: api_queries.py
example/: bidir.json  example.ipynb  paper_metadata.json
example/JSONs/: mateuszbuda_brain-segmentation.json
metadata_extraction/: github_extractor_tika.py  metadata_obj.py  paper_obj.py  regex.py
metadata_extraction/api/: openAlex_api_queries.py
metadata_extraction/pdf_extraction/: github_extractor_tika.py
metadata_extraction/somef_extraction/: somef_extractor.py
modelling/: bidirectionality.py  bidirectionalitycopy.py  unidirectionality.py
object_creator/: create_downloadedObj.py  doi_to_metadata.py  downloaded_to_paperObj.py  paper_obj_utils.py  paper_to_directionality.py  pdf_to_downloaded.py  pipeline.py
pipeline/: create_downloadedObj.py  doi_to_metadata.py  pdf_to_downloaded.py
prediction/: bidir.json  bidir_old.json  corpus.csv  corpus_eval.json  corpus_eval25.json  corpus_eval_bidir.json  corpus_eval_uni.json  corpus_unidir.csv  evaluate_corpus.py  unidir.json  unidir_20_07.json
prediction/oldEvals/: bidir.json  bidir04_07.json  corpus_eval04_07.json  (+2 more)
test/: short.txt  test.py  testOEG.txt  test_directionality.py  test_download_pdf.py  test_extraction.py  test_metadata.py
utils/: regex.py
(+199 files in other folders)
