[metadata]
name = SSKG
version = attr: SSKG.__version__
author =  Miguel Arroyo Márquez, Daniel Garijo
author_email = daniel.garijo@upm.es
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SoftwareUnderstanding/SSKG
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >= 3.10.0
install_requires =
    somef >= 0.9.4
    arxiv   
    bibtexparser
    fuzzywuzzy
    jaro_winkler
    tika
    beautifulsoup4
    python-Levenshtein
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sskg = SSKG.__main__:cli
